--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-	font-family: -apple-system,BlinkMacSystemFont,'avenir next',avenir,helvetica,'helvetica neue',ubuntu,roboto,noto,'segoe ui',arial,sans-serif;
+	font-family: system-ui, sans-serif;
 	-webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 	line-height:1.5;
